--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,35 @@
 version: "latest"
 services:
+  gophKeeperClient:
+    image: keeper_client
+    entrypoint:
+      POSTGRES_DSN: "postgres://admin:1234@localhost:5431/testClient?sslmode=disable"
+      SERVER_ADDRESS: "http://127.0.0.1:8080"
+      MINIO_ACCESS_KEY_ID: "minio"
+      MINIO_SECRET_KEY_ID: "minio123"
+      MINIO_ENDPOINT: "127.0.0.1:9000"
+      BUCKET_NAME: "default-bucket"
+    depends_on:
+      - minioClient
+      - postgresClient
+
+  gophKeeperServer:
+    image: keeper_server
+    environment:
+      SECRET_KEY: "someSecretKey"
+      POSTGRES_DSN: "postgres://admin:1234@localhost:5432/test?sslmode=disable"
+      SALT: "someSalt"
+      RUN_ADDRESS: "http://127.0.0.1:8080"
+      MINIO_ACCESS_KEY_ID: "minioServer"
+      MINIO_SECRET_KEY_ID: "minioServer123"
+      MINIO_ENDPOINT: "127.0.0.1:9001"
+    ports:
+      - "8080:8080"
+
+    depends_on:
+      - minioServer
+      - postgresServer
+
   postgresClient:
     image: postgres:latest
     environment:
@@ -11,6 +41,7 @@ services:
     ports:
       - "5431:5431"
 
+
   postgresServer:
     image: postgres:latest
     environment:
@@ -19,6 +50,7 @@ services:
       POSTGRES_PASSWORD: "1234"
     ports:
       - "5432:5432"
+
 
   minioClient:
     image: minio/minio:latest
@@ -36,6 +68,7 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
+
 
   minioServer:
     image: minio/minio:latest
@@ -57,5 +90,4 @@ services:
 volumes:
   minio-storage:
 
-
-# "postgres://admin:1234@localhost:5432/testClient?sslmode=disable"
+#// urlExample := "postgres://username:password@localhost:5432/database_name"
