--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ version: "latest"
 services:
   gophKeeperClient:
     container_name: gophKeeperClient
+    hostname: gophKeeperClient
     image: keeper_client
     command: tail -F anything
     environment:
@@ -17,6 +18,7 @@ services:
 
   gophKeeperServer:
     container_name: gophKeeperServer
+    hostname: gophKeeperServer
     image: keeper_server
     environment:
       SECRET_KEY: "someSecretKey"
@@ -36,6 +38,7 @@ services:
 
   postgresClient:
     container_name: postgresClient
+    hostname: postgresClient
     image: postgres:latest
     command: -p 5431
     environment:
@@ -49,6 +52,7 @@ services:
 
   postgresServer:
     container_name: postgresServer
+    hostname: postgresServer
     image: postgres:latest
     command: -p 5432
     environment:
@@ -62,6 +66,7 @@ services:
 
   minioClient:
     container_name: minioClient
+    hostname: minioClient
     image: minio/minio:latest
     command: server --console-address ":9001" /data/
     ports:
@@ -82,6 +87,7 @@ services:
 
   minioServer:
     container_name: minioServer
+    hostname: minioServer
     image: minio/minio:latest
     command: server --console-address ":9091" --address ":9090" /data/
     ports:
